--- a/index.html
+++ b/index.html
@@ -15,23 +15,26 @@
         </div>
     </header>
     <div class="card">
-        <div class="item-card">
-            <img class="img-card" src="https://picsum.photos/200/300?random=1">
-            <div class="text">💖 Lorem Picsumu</div>
-            <img class="img-card" src="https://picsum.photos/200/300?random=2">
-            <div class="text">💖 Lorem Picsumu</div>
-            <img class="img-card" src="https://picsum.photos/200/300?random=3">
-            <div class="text">💖 Lorem Picsumu</div>
-            <img class="img-card" src="https://picsum.photos/200/300?random=4">
-            <div class="text">💖 Lorem Picsumu</div>
-            <img class="img-card" src="https://picsum.photos/200/300?random=5">
-            <div class="text">💖 Lorem Picsumu</div>
-            <img class="img-card" src="https://picsum.photos/200/300?random=6">
-            <div class="text">💖 Lorem Picsumu</div>
+        <div class="row">
+            <div class="column">
+                <img class="img-card" src="https://picsum.photos/200/300?random=1">
+                <div class="text">💖 Lorem Picsumu</div>
+                <img class="img-card" src="https://picsum.photos/200/300?random=2">
+                <div class="text">💖 Lorem Picsumu</div>
+            </div>
+            <div class="column">   
+                <img class="img-card" src="https://picsum.photos/200/300?random=3">
+                <div class="text">💖 Lorem Picsumu</div>            
+                <img class="img-card" src="https://picsum.photos/200/300?random=4">
+                <div class="text">💖 Lorem Picsumu</div>
+            </div>
+            <div class="column">
+                <img class="img-card" src="https://picsum.photos/200/300?random=5">
+                <div class="text">💖 Lorem Picsumu</div>
+                <img class="img-card" src="https://picsum.photos/200/300?random=6">
+                <div class="text">💖 Lorem Picsumu</div>
+            </div>
         </div>
     </div>
-    <footer class="main">
-        <p class="footer-text">Photo grid desenvolvido por Jennifer Lima</p>
-    </footer>
 </body>
 </html>
